[package]
name = "os_rust"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[profile.test]
panic = "unwind"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.2"
serial = { path = "./crates/serial" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[workspace]
members = ["crates/*", "."]

[[test]]
name = "should_panic"
harness = false
